# dyntest

./: Cargo.toml  README.md  rustfmt.toml
examples/: config.rs  glob.rs  groups.rs
src/: lib.rs
tests/: basic.rs  tests.rs
tests/fails/: Cargo.toml
