[package]
name = "dyntest"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
globset = { version = "0.4.14", optional = true }
walkdir = { version = "2.5.0", optional = true }

[features]
default = ["glob"]
glob = ["dep:globset", "dep:walkdir"]

[[test]]
name = "basic"
harness = false
