[package]
name = "dyntest"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tjjfvi/dyntest"
description = "Dynamically create test cases."

[dependencies]
globset = { version = "0.4.14", optional = true }
walkdir = { version = "2.5.0", optional = true }

[features]
default = ["glob"]
glob = ["dep:globset", "dep:walkdir"]

[workspace]
members = ["tests/fails"]
