[package]
name = "dyntest"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tjjfvi/dyntest"
description = "Dynamically create test cases."

[dependencies]
globset = { version = "0.4.14", optional = true }
walkdir = { version = "2.5.0", optional = true }

[features]
default = ["glob"]
glob = ["dep:globset", "dep:walkdir"]
test_explorer = []

[workspace]
members = ["tests/fails"]
